[package]
name = "qwt"
version = "0.2.0"
edition = "2021"
authors = ["Rossano Venturini <rossano.venturini@unipi.it>"]
readme = "README.md"
description = "Rust implementation of Quad Wavelet Tree"
license = "MIT"
repository = "https://github.com/rossanoventurini/qwt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
generic-tests = "0.1.2"
num-traits = "0.2.15"
paste = "1.0.9"
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
serde-big-array = "0.5.1"
bincode = "1.3.3"
minimum_redundancy = "0.3.1" 

[features]
default = ["prefetch"]
prefetch = []

[profile.release]
lto = true
debug = true
